adding middleware with logrus

--- a/src/.env
+++ b/src/.env
@@ -25,7 +25,8 @@
 
 # # Mysql Live
 #DB_HOST=fullstack-mysql                       
-DB_HOST=192.168.178.46                           # when running the app without docker 
+#DB_HOST=192.168.178.46                           # when running the app without docker 
+DB_HOST=192.168.178.45
 DB_DRIVER=mysql 
 DB_USER=root
 DB_PASSWORD=mypassword
@@ -35,7 +36,8 @@ DB_PORT=3306
 
 # Mysql Test
 #TEST_DB_HOST=mysql_test                        
-TEST_DB_HOST=192.168.178.46                      # when running the app without docker 
+#TEST_DB_HOST=192.168.178.46                      # when running the app without docker 
+TEST_DB_HOST=192.168.178.45
 TEST_DB_DRIVER=mysql
 TEST_DB_USER=root
 TEST_DB_PASSWORD=mypassword
