--- a/src/.env
+++ b/src/.env
@@ -27,6 +27,8 @@
 #DB_HOST=fullstack-mysql                       
 #DB_HOST=192.168.178.46                           # when running the app without docker 
 DB_HOST=192.168.178.45
+#DB_HOST=192.168.21.150
+#DB_HOST=127.0.0.1
 DB_DRIVER=mysql 
 DB_USER=root
 DB_PASSWORD=mypassword
@@ -36,8 +38,10 @@ DB_PORT=3306
 
 # Mysql Test
 #TEST_DB_HOST=mysql_test                        
+TEST_DB_HOST=127.0.0.1
 #TEST_DB_HOST=192.168.178.46                      # when running the app without docker 
-TEST_DB_HOST=192.168.178.45
+#TEST_DB_HOST=192.168.178.45
+#TEST_DB_HOST=192.168.21.150
 TEST_DB_DRIVER=mysql
 TEST_DB_USER=root
 TEST_DB_PASSWORD=mypassword
